@@ -1,5 +1,6 @@
 =app-misc/calculate-install-gui-2.2.9999 amd64 x86
 =sys-apps/calculate-9999 amd64 x86
+=sys-apps/calculate-client-2.2.9999 amd64 x86
 =sys-apps/calculate-client-9999 amd64 x86
 =sys-apps/calculate-desktop-2.2.9999 amd64 x86
 =sys-apps/calculate-install-2.2.9999 amd64 x86
