@@ -1,11 +1,13 @@
 # Live svn ebuilds
+=app-misc/calculate-install-gui-2.2.9999
 =sys-apps/calculate-9999
+=sys-apps/calculate-client-2.2.9999
 =sys-apps/calculate-client-9999
+=sys-apps/calculate-desktop-2.2.9999
+=sys-apps/calculate-install-2.2.9999
+=sys-apps/calculate-lib-2.2.9999
 =sys-apps/calculate-lib-9999
 =sys-apps/calculate-server-9999
-=sys-apps/calculate-lib-2.2.9999
-=sys-apps/calculate-install-2.2.9999
-=app-misc/calculate-install-gui-2.2.9999
 
 # Under construction
 >app-misc/cld-meta-10.4.9
