@@ -7,6 +7,7 @@ EBUILD calculate-client-2.1.11.ebuild 1666 RMD160 1b9daee165695618b7404e51e58436
 EBUILD calculate-client-2.1.17-r1.ebuild 1809 RMD160 9b2e60c8b48807d86273fc9b78b1c8db4c79cea5 SHA1 4862fd10526862f7baa047d790f117787dcedc9a SHA256 b53f9a16678d4be95a23afef2cf0997f6567b38e936ec9590e3feeda66df45fc
 EBUILD calculate-client-2.1.17-r2.ebuild 1896 RMD160 01fb62dab724750b7514cb57353214a2d4f75337 SHA1 a43f4873532be1ca1edae47828fc22b0f164b88c SHA256 3da7be8962541bb447e667de5e3e2c67f06beda528b3282af4741a97265f6312
 EBUILD calculate-client-2.1.18.ebuild 1695 RMD160 91c6a5f07302640ad649824ed10d6495a724df58 SHA1 6e7c10b192a02f0daeb705d93585cd5db9fbff0d SHA256 ebc7776a3c62d3d37c6d36e02d78b1ceffea826229a213047371a6fde645f84f
+EBUILD calculate-client-2.2.9999.ebuild 1635 RMD160 3f66f8ce2f432f04ae34521deb6fed05fbeaf8ff SHA1 f5dfd94f5152c56db9913418742c296fce4efe95 SHA256 2869594df572d28de833d84931e75e39eebd90f3f48c2466ece57aff49f48c1a
 EBUILD calculate-client-9999.ebuild 1640 RMD160 5d0dc794ef81d27de840059d84425d87d4d5c638 SHA1 5e1e90ac0c7d5ce26ff848212b28a0895ff901f3 SHA256 3484b1c3d6d5be7aef070468b07947be1ebcac829eeb1daf6041978e411757c3
-MISC ChangeLog 3465 RMD160 694a80d31a3ed79626d6ffa225574266fd76f9bc SHA1 f500d9a34dfc447249ff51cf84b25df26931c2ae SHA256 f902d896c32c6b702b01302255ff8f3d7c66b6c0f83cc342bafd58cd17b7c24c
+MISC ChangeLog 3650 RMD160 5e28a7bd20d383587d5f0058d31a35413b40fb80 SHA1 3c812c0e47a8122f2fe5559b5d3621f806b03566 SHA256 f9a79fece89030a9a57ffdeede07480b621a6b35ed46b818fe8a9eb68b49b894
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
