@@ -1,3 +1,3 @@
-EBUILD calculate-desktop-2.2.9999.ebuild 466 RMD160 41ddf276b0a91392e27ee6a068e911e6f53c31fb SHA1 e0f08272fe50398f24fcaeb77a1d48cb9168249f SHA256 c71126e13dcf02210a9f613d58828c5395aeba73f423413c2624bdb4fe5c4508
+EBUILD calculate-desktop-2.2.9999.ebuild 468 RMD160 ee6d69f75b5e0a82e70ffa42d980970b9298bd7a SHA1 215b9dec50ae48284d782eb40ed9c0fa263b3bb4 SHA256 206e54e5ce0d4b9827382c33031a35d588d4d6eb4eb7b030ccaedf75cdfd606d
 MISC ChangeLog 332 RMD160 a061769ab4b0e41cbd331092770004c1f4aeb100 SHA1 23600311c04aa6b90adfa22315a1a1af15698e77 SHA256 b7d0f5c01d2ca2e7a7c6930554a323660c08226d2f93b386dda96ecfd03a4322
 MISC metadata.xml 315 RMD160 36a1a8d03aed0a483def83e076f484a64d452a8b SHA1 f6e70641eab777d2417d8a7600e8d3f09f53f96f SHA256 67fea0b1af7d10c0f86e72ab40f527e99c6f81f7aace4716344bdfb97c769a18
