@@ -11,7 +11,7 @@ EGIT_REPO_URI="git://git.calculate.ru/calculate-desktop.git"
 DESCRIPTION="The program of the desktop configuration Calculate Linux"
 HOMEPAGE="http://www.calculate-linux.org/main/en/calculate2"
 LICENSE="Apache-2.0"
-SLOT="0"
+SLOT="2.2"
 KEYWORDS="~amd64 ~x86"
 
 DEPEND="=sys-apps/calculate-lib-2.2.9999"
