@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.2.9999 (01 Jun 2010)
+
+  01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-client-2.2.9999.ebuild:
+  Added live ebuild for calculate-client 2.2
+
 *calculate-client-2.1.18 (28 May 2010)
 
   28 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
